--- a/package.json
+++ b/package.json
@@ -8,14 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@notionhq/client": "^0.4.4",
-    "next": "12.0.1",
-    "react": "17.x",
-    "react-dom": "17.x",
-    "react-syntax-highlighter": "^15.6.1"
-  },
-  "devDependencies": {
-    "@types/react": "^19.0.12",
-    "typescript": "^5.8.2"
+    "@notionhq/client": "^0.4.13",
+    "next": "^15.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
