--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@notionhq/client": "^0.4.13",
     "next": "^15.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0"
   }
 }
